Modify books on interface to address spacing issues
Previously, if the title, author, etc. were too long for a book,
it would go on multiple lines and expand the height of the book.
Change it so that the height is fixed. Additionally, permit
breaking words in the middle for wrapping purposes

--- a/style.css
+++ b/style.css
@@ -213,15 +213,19 @@ input[type="checkbox"]:checked::before {
 .book-container {
     border: 4px solid #CCC;
     padding: 1rem;
+    height: 23rem;
     width: 20rem;
     text-align: center;
     background-color: #EFEFEF;
-    box-sizing: border-box
+    box-sizing: border-box;
+    position: relative;
 }
 
 .book-container .book-title {
     font-weight: bold;
     font-size: 2.2rem;
+    width: 100%;
+    word-wrap: break-word;
     color: var(--russian-green);
     margin: 1rem 0;
 }
@@ -230,17 +234,21 @@ input[type="checkbox"]:checked::before {
     color: black;
     font-size: 1.7rem;
     margin: 1rem 0;
+    word-wrap: break-word;
 }
 
 .book-container .book-pages {
     color: #222;
     font-size: 1.6rem;
     margin: 1rem 0;
+    word-wrap: break-word;
 }
 
 .book-container .book-read {
-    margin-top: 11rem;
-    margin-bottom: 0.5rem;
+    position: absolute;
+    bottom: 0.5rem;
+    left: 50%;
+    transform: translatex(-50%);
     font-size: 1.7rem;
 }
 .book-container .options button {
